--- a/public/css/general.css
+++ b/public/css/general.css
@@ -30,3 +30,9 @@ body {
 form {
     display: inline-block;
 }
+
+.error-msg {
+    color: crimson;
+    font-weight: bold;
+    margin-top: 5px;
+}
